--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dates": "^21.5.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux-saga": "^1.1.3"
   },
